--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "test:watch": "jest --watchAll --detectOpenHandles",
-    "test": "jest --runInBand --detectOpenHandles  --forceExit",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' npx jest --runInBand --forceExit",
     "start": "node --watch server.js",
     "seed:todos:dev": "node seed/callSeedTodos.js",
     "seed:todos:test": "MONGODB_DATABASE_NAME=todo_TEST node seed/callSeedTodos.js",
